# p2-grafics-nuevo

./: .gitignore  CMakeLists.txt  GLWidget.cpp  GLWidget.hpp  GPUCamera.cpp  GPUCamera.hpp  GPUConfig.hpp  GPUWorld.cpp  GPUWorld.hpp  GUIRenderToy.cpp  GUIRenderToy.hpp  LICENSE  MainWindow.cpp  README.md  imgui.ini
GeometricObjects/: Cub.cpp  Cub.hpp  Face.cpp  Face.hpp  GPUMaterial.cpp  GPUMaterial.hpp  GPUScene.cpp  GPUScene.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  ObjectFactory.cpp  ObjectFactory.hpp
Lights/: GPULight.cpp  GPULight.hpp  GPULightsManager.hpp  GPUPointLight.cpp  GPUPointLight.hpp
Utilities/: GPUConnectable.hpp  GPUShader.cpp  GPUShader.hpp  Image.cpp  Image.hpp
resources/GPUshaders/: fNormalShader.glsl  fPhongShader.glsl  fTextureShader.glsl  fshader1.glsl  fshader2.glsl  vMaterialShader.glsl  vNormalShader.glsl  vPhongShader.glsl  vTextureShader.glsl  vshader1.glsl  vshader2.glsl
